# CityLibrary

./: .editorconfig  .gitignore  .json  README.md  db.sqlite3  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
CityLibrary/: asgi.py  settings.py  urls.py  wsgi.py
DjangoAdmin/: README.md  pyproject.toml
DjangoAdmin/Admin/: settings.py  urls.py
ReactFrontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ReactFrontend/src/: App.tsx  Loading.tsx  hero.ts  index.css  main.tsx
ReactFrontend/src/components/: AuthorCard.tsx  AuthorsState.tsx  BookCard.tsx  BooksState.tsx  UserCard.tsx
ReactFrontend/src/layout/: AuthFormsLayout.tsx  UserLayout.tsx
ReactFrontend/src/pages/: Landing.tsx  Loading.tsx  Signup.tsx  UserLogin.tsx  UserSignup.tsx
ReactFrontend/src/utils/: base.ts
ReactFrontend/src/validator/: author.ts  book.ts  page.ts  user-auth.ts
Server/: admin.py  urls.py  views.py
Server/templates/: base.html  index.html
Server/templates/cotton/: card.html
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/src/: Error.tsx  Loader.tsx  NotFound.tsx  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
client/src/Components/: AuthorCard.tsx  BookCard.tsx  Modal.tsx  Pagination.tsx
client/src/Contexts/: DaisyUIProvider.tsx
client/src/Layouts/: PageNav.tsx
client/src/hooks/: fetchAuthors.ts  fetchBook.ts
client/src/routes/: __root.tsx  index.tsx  login.tsx  user.tsx  (+1 more)
staticfiles/: staticfiles.json
(+23 files in other folders)
