[project]
name = "citylibrary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.7",
    "django-cotton>=2.1.3",
    "django-extensions>=4.1",
    "django-unfold>=0.67.0",
    "waitress>=3.0.2",
    "whitenoise>=6.11.0",
]

[project.scripts]
prod = "CityLibrary.runner:prod"
dev = "CityLibrary.runner:dev"
